# MedicalTranscriptsSPCS

./: .gitignore  QUICKSTART.md  README.md  cleanup_database.sql  medical_transcripts_solution_analysis.md  prompts_config.py  requirements.txt  run_all_styles.sh
UI_Enhance/: DESIGN.md  PROJECT_PLAN.md
references/: pyproject.toml  requirements.txt
scripts/: deploy_healthcare_demo.py  recreate_cortex_search.py  run_cortex_baseline_tests.py  setup_database_simple.py  setup_pmc_database.py  validate_deployment.py
sql/: 00_setup_pmc_patients_database.sql  01_create_database_objects.sql  02_create_subset_and_new_tables.sql  03_create_batch_processing_procedure.sql  10_create_patient_analysis_v2.sql  scratch.sql
src/: connection_helper.py  pyproject.toml  streamlit_corporate.py  streamlit_main.py
src/pages/: 1_🏥_Data_Foundation.py  2_🩺_Clinical_Decision_Support.py  3_🔬_Prompt_and_Model_Testing.py  4_📊_Population_Health_Analytics.py  5_💰_Cost_Analysis.py  6_💊_Medication_Safety.py  7_📈_Quality_Metrics.py  8_🤖_AI_Model_Performance.py  9_📋_Demo_Guide.py
src/shared/: ai_helpers.py  chart_data.py  data_processors.py
