[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-transcripts-spcs"
version = "1.0.0"
description = "Healthcare AI Demo for Streamlit in Snowflake on SPCS V2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.49.0",
    "pandas>=2.3.1",
    "numpy>=1.24.0", 
    "plotly>=6.0.1",
    "altair>=5.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "snowflake.core>=1.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
